[package]
name = "ruapt_proxy"
version = "0.1.0"
authors = ["接舆 <qinwu.qw@alibaba-inc.com>"]
edition = "2018"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
deadpool = "*"
async-trait = "*"
tokio =  { version = "^0.2", features = ["full"] }
bendy = { version = "^0.3", features = ["std", "serde"] }
tokio-util = { version = "0.3.1", features = ["full"] }
futures = "0.3"
rand = "*"