[package]
name = "ruapt_tracker"
version = "0.1.0"
authors = ["接舆 <qinwu.qw@alibaba-inc.com>"]
edition = "2018"
workspace = "../"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "0.3", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["full"] }
tokio-serde = {version = "*", features=["json"]}
deadpool-redis = "0.6.1"
deadpool = "*"
async-trait = "*"
serde = "*"
bendy = { version = "^0.3", features = ["std", "serde"] }
futures = "0.3"
